# galadrielcss

./: .gitignore  .npmignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  README.md  alchemy.js  index.d.ts  index.js  main.d.ts  main.js  package.json
.github/actions/: download-artifacts.yml
.github/workflows/: CI.yml  build.yml  galadrielcss-build.yml
__test__/: index.spec.mjs
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: logger.js  parseConfig.js  spinner.js  typeWeaver.js
src/: cli.js  lib.rs  main.rs
src/ast/: core_ast.rs
src/astroform/: mod.rs
src/asts/: mod.rs
src/baraddur/: mod.rs
src/cli/: index.js
src/configatron/: mod.rs
src/core/: dynamic_core.rs  static_core.rs
src/crafters/: craftingStyles.d.ts  craftingStyles.js
src/crealion/: mod.rs
src/error/: mod.rs
src/events/: mod.rs
src/formera/: mod.rs
src/gatekeeper/: mod.rs
src/injectron/: mod.rs
src/intaker/: mod.rs
src/kickstartor/: mod.rs
src/lothlorien/: mod.rs
src/palantir/: mod.rs
src/shellscape/: mod.rs
src/synthesizer/: mod.rs
src/trailblazer/: mod.rs
src/types/: config.ts  coreTypes.ts  mod.rs  typeManifest.ts
src/updates/: mod.rs
src/utils/: mod.rs
(+88 files in other folders)
