[package]
edition = "2021"
name = "galadrielcss"
version = "1.0.0-beta.0.2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
serde = "1.0.192"
serde_json = "1.0.108"
sha2 = "0.10.8"
lazy_static = "1.4.0"
linked-hash-map = "0.5.6"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
