[package]
name = "galadrielcss"
description = "Galadriel CSS is a cutting-edge framework designed to create modular and scalable styling. Powered by the Nenyr language, it streamlines the styling process with intelligent features."
authors = ["Patrick Gunnar <gunnarpatricke@gmail.com>"]
version = "1.0.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
dashmap = "6.1.0"
indexmap = "2.6.0"
tungstenite = "0.24.0"
serde_json = "1.0.132"
tracing = "0.1.40"
tracing-appender = "0.2.3"
rand = "0.8.5"
futures = "0.3.31"
walkdir = "2.5.0"
ignore = "0.4.23"
backtrace = "0.3.74"
notify = "7.0.0"
notify-debouncer-full = "0.4.0"
textwrap = "0.16.1"
syntect = "5.2.0"
regex = "1.11.1"
axum = "0.7.9"
filetime = "0.2.25"

tokio = { version = "1.41.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
serde = { version = "1.0.214", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["time"] }
chrono = { version = "0.4.38", features = ["serde"] }
ratatui = { version = "0.29.0", features = ["all-widgets"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }

nenyr = { path = "/home/patrickgunnar/Desktop/nenyr" }
